--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "bunx @biomejs/biome lint .",
+    "format": "bunx @biomejs/biome format . --write",
+    "check": "bunx @biomejs/biome check --apply ."
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "google-auth-library": "^9.4.2",
+    "google-spreadsheet": "^4.1.1",
+    "lucide-react": "^0.309.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.2",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
